[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Access Control/Icons/close.svg" type="Texture" id=1]
[ext_resource path="res://Scripts/Access Control/UI/button_style_controller.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Button" type="Button"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 49.0
margin_bottom = 43.0
custom_styles/focus = SubResource( 1 )
icon = ExtResource( 1 )
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
